src/test/deca/syntax/valid/SansObjet/OrExpr2-AndExpr.deca
// Description:
//    Multiple Or expressions and an And expression.
//
// Results:
//    (void)
//
// Historique:
//    cree le 08/01/2022

{
        x || 3 && 8 || sum;
}
